--- a/Portfolio/React/my-app/public/index.html
+++ b/Portfolio/React/my-app/public/index.html
@@ -2,6 +2,8 @@
 <html lang="fr">
   <head>
     <meta charset="utf-8" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Portfolio Tom Ozorai</title>
   </head>
   <body>
